--- a/BigPlanetTracks/res/values/strings.xml
+++ b/BigPlanetTracks/res/values/strings.xml
@@ -72,7 +72,7 @@
     
     <string name="ABOUT_TITLE">Big Planet Tracks</string>
     <string name="ABOUT_MESSAGE">
-Big Planet Tracks is an online/offline maps application that can import, export and record your GPS tracks and show the track\'s time, distance, speed, etc..\n
+Big Planet Tracks is an online/offline maps application that can import, export and record your GPS tracks and show the track\'s time, distance, speed, etc.\n
 \n
 ©2009-2010 Developer: TYTung\n
 Contributors: taiyuchen, dob711\n
