--- a/BigPlanetTracks/res/values-zh-rTW/strings.xml
+++ b/BigPlanetTracks/res/values-zh-rTW/strings.xml
@@ -30,6 +30,7 @@
     <string name="auto_follow_disabled">解除自動跟隨功能</string>
     <string name="auto_follow_enabled">開啟自動跟隨功能</string>
     <string name="track_enabled">開始記錄軌跡</string>
+    <string name="stop_tracking">停止記錄軌跡 ?</string>
     <string name="MY_LOCATION_MENU">我的位置</string>
     <string name="SEARCH_MENU">搜尋</string>
     <string name="ABOUT_MENU">關於</string>
