--- a/BigPlanetTracks/res/values-zh-rCN/strings.xml
+++ b/BigPlanetTracks/res/values-zh-rCN/strings.xml
@@ -30,6 +30,7 @@
     <string name="auto_follow_disabled">解除自动跟随功能</string>
     <string name="auto_follow_enabled">开启自动跟随功能</string>
     <string name="track_enabled">开始记录轨迹</string>
+    <string name="start_tracking">开始记录轨迹 ?</string>
     <string name="finish_tracking">结束记录轨迹 ?</string>
     <string name="MY_LOCATION_MENU">我的位置</string>
     <string name="SEARCH_MENU">搜寻</string>
