--- a/BigPlanetTracks/res/values/strings.xml
+++ b/BigPlanetTracks/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="auto_follow_disabled">Auto-Follow Disabled</string>
     <string name="auto_follow_enabled">Auto-Follow Enabled</string>
     <string name="track_enabled">Start tracking</string>
+    <string name="start_tracking">Start tracking ?</string>
     <string name="finish_tracking">Finish tracking ?</string>
     <string name="MY_LOCATION_MENU">My Location</string>
     <string name="SEARCH_MENU">Search</string>
