--- a/BigPlanetTracks/res/values-zh-rCN/strings.xml
+++ b/BigPlanetTracks/res/values-zh-rCN/strings.xml
@@ -12,9 +12,6 @@
     
     <string name="app_name">*星迹地图*</string>
     
-    <string name="EDIT_MENU">编辑</string>
-    <string name="DELETE_MENU">删除</string>
-    
     <string name="YES_LABEL">是</string>
     <string name="NO_LABEL">否</string>
     <string name="OK_LABEL">确定</string>
@@ -26,6 +23,11 @@
     
     <string name="REMOVE_BOOKMARK_TITLE">移除书签</string>
     <string name="REMOVE_BOOKMARK_MESSAGE">您确定吗?</string>
+	<string-array name="bookmark_items_dialog">
+		<item>检视</item>
+		<item>编辑</item>
+		<item>删除</item>
+	</string-array>
     
     <string name="auto_follow_disabled">解除自动跟随功能</string>
     <string name="auto_follow_enabled">开启自动跟随功能</string>
