--- a/BigPlanetTracks/res/values-zh-rTW/strings.xml
+++ b/BigPlanetTracks/res/values-zh-rTW/strings.xml
@@ -12,9 +12,6 @@
     
     <string name="app_name">*星跡地圖*</string>
     
-    <string name="EDIT_MENU">編輯</string>
-    <string name="DELETE_MENU">刪除</string>
-    
     <string name="YES_LABEL">是</string>
     <string name="NO_LABEL">否</string>
     <string name="OK_LABEL">確定</string>
@@ -26,6 +23,11 @@
     
     <string name="REMOVE_BOOKMARK_TITLE">移除書籤</string>
     <string name="REMOVE_BOOKMARK_MESSAGE">您確定嗎?</string>
+	<string-array name="bookmark_items_dialog">
+		<item>檢視</item>
+		<item>編輯</item>
+		<item>刪除</item>
+	</string-array>
     
     <string name="auto_follow_disabled">解除自動跟隨功能</string>
     <string name="auto_follow_enabled">開啟自動跟隨功能</string>
